--- a/DUNGEON AND DRAGONS PROJECT/DUNGEON AND DRAGONS PROJECT.vcxproj.filters
+++ b/DUNGEON AND DRAGONS PROJECT/DUNGEON AND DRAGONS PROJECT.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\Sounds.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\LoopCalls.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\ConsoleColors.h">
