--- a/DUNGEON AND DRAGONS PROJECT/DUNGEON AND DRAGONS PROJECT.vcxproj
+++ b/DUNGEON AND DRAGONS PROJECT/DUNGEON AND DRAGONS PROJECT.vcxproj
@@ -88,21 +88,25 @@
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Stefania\source\repos\cristianxiix\DUNGEON-AND-DRAGONS-PROJECT\DUNGEON AND DRAGONS PROJECT\includes;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Stefania\source\repos\cristianxiix\DUNGEON-AND-DRAGONS-PROJECT\DUNGEON AND DRAGONS PROJECT\includes;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Stefania\source\repos\cristianxiix\DUNGEON-AND-DRAGONS-PROJECT\DUNGEON AND DRAGONS PROJECT\includes;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
     <IntDir>$(Configuration)\</IntDir>
     <LibraryPath>$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\Stefania\source\repos\cristianxiix\DUNGEON-AND-DRAGONS-PROJECT\DUNGEON AND DRAGONS PROJECT\includes;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -110,12 +114,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Dev\NewProj\DUNGEON AND DRAGONS PROJECT\DUNGEON AND DRAGONS PROJECT\includes;C:\Dev\NewProj\SDL\SDL2-2.30.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Stefania\source\repos\cristianxiix\DUNGEON-AND-DRAGONS-PROJECT\DUNGEON AND DRAGONS PROJECT\src\SDL\SDL2-2.30.2\include;C:\Dev\NewProj\DUNGEON AND DRAGONS PROJECT\DUNGEON AND DRAGONS PROJECT\includes;C:\Dev\NewProj\SDL\SDL2-2.30.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Dev\NewProj\SDL\SDL2-2.30.2\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Stefania\source\repos\SDL2-devel-2.30.4-VC\SDL2-2.30.4\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -127,14 +131,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Dev\NewProj\DUNGEON AND DRAGONS PROJECT\DUNGEON AND DRAGONS PROJECT\includes;C:\Dev\NewProj\SDL\SDL2-2.30.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Stefania\source\repos\cristianxiix\DUNGEON-AND-DRAGONS-PROJECT\DUNGEON AND DRAGONS PROJECT\src\SDL\SDL2-2.30.2\include;C:\Dev\NewProj\DUNGEON AND DRAGONS PROJECT\DUNGEON AND DRAGONS PROJECT\includes;C:\Dev\NewProj\SDL\SDL2-2.30.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Dev\NewProj\SDL\SDL2-2.30.2\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Stefania\source\repos\SDL2-devel-2.30.4-VC\SDL2-2.30.4\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -144,12 +148,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Dev\NewProj\DUNGEON AND DRAGONS PROJECT\DUNGEON AND DRAGONS PROJECT\includes;C:\Dev\NewProj\SDL\SDL2-2.30.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Stefania\source\repos\cristianxiix\DUNGEON-AND-DRAGONS-PROJECT\DUNGEON AND DRAGONS PROJECT\src\SDL\SDL2-2.30.2\include;C:\Dev\NewProj\DUNGEON AND DRAGONS PROJECT\DUNGEON AND DRAGONS PROJECT\includes;C:\Dev\NewProj\SDL\SDL2-2.30.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Dev\NewProj\SDL\SDL2-2.30.2\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Stefania\source\repos\SDL2-devel-2.30.4-VC\SDL2-2.30.4\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -161,14 +165,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Dev\NewProj\DUNGEON AND DRAGONS PROJECT\DUNGEON AND DRAGONS PROJECT\includes;C:\Dev\NewProj\SDL\SDL2-2.30.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Stefania\source\repos\cristianxiix\DUNGEON-AND-DRAGONS-PROJECT\DUNGEON AND DRAGONS PROJECT\src\SDL\SDL2-2.30.2\include;C:\Dev\NewProj\DUNGEON AND DRAGONS PROJECT\DUNGEON AND DRAGONS PROJECT\includes;C:\Dev\NewProj\SDL\SDL2-2.30.2\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Dev\NewProj\SDL\SDL2-2.30.2\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Stefania\source\repos\SDL2-devel-2.30.4-VC\SDL2-2.30.4\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
